# ba-firmware-driver-hv

./: Cargo.toml  README.md
algo/: Cargo.toml
algo/src/: lib.rs
cross/: Cargo.toml  Embed.toml  memory.x
cross/.cargo/: config
cross/src/: init.rs  main.rs
src/: globals.rs  main.rs  proto.rs
