[package]
authors = ["Yann Ramin <github@theatr.us>"]
edition = "2018"
readme = "README.md"
name = "ba-firmware-driver-hv"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
#panic-halt = "0.2"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

num-traits = { version = "0", default-features = false }

# Uncomment for the allocator example.
alloc-cortex-m = "0.4"
rtt-target = { version = "0.3", features = ["cortex-m"] }
usb-device = "0.2"
usbd-serial = "0.1"

[dependencies.atsamd-hal]
features = ["same51j", "unproven"]
#git = "https://github.com/atsamd-rs/atsamd"
#revision = "master"
path = "../atsamd/hal"

[dependencies.atsame51j]
#path = "../atsamd/pac/atsame51j"
git = "https://github.com/atsamd-rs/atsamd"
revision = "master"


[dependencies.ba_driver_hv_bsp]
path = "../blueacro-bsp/ba_driver_hv_bsp"
features = ["default", "rt", "usb"]

# this lets you use `cargo fix`!
[[bin]]
name = "ba-firmware-driver-hv"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
